--- a/src/components/forWorker/styles1/slider.css
+++ b/src/components/forWorker/styles1/slider.css
@@ -4,7 +4,7 @@
     width: 40%; /* Full-width */
     height: 5px; /* Specified height */
     border-radius: 5px;
-    background: #f1b606; /* Grey background */
+    background: #f04d2d; /*  background */
     outline: none; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -23,14 +23,14 @@
     width: 20px; /* Set a specific slider handle width */
     height: 20px; /* Slider handle height */
     border-radius: 50%;
-    background: #f1b606; /* Green background */
+    background: #f04d2d;
     cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
     width: 20px; /* Set a specific slider handle width */
     height: 20px; /* Slider handle height */
-    background: #f1b606; /* Green background */
+    background: #f04d2d;
     cursor: pointer; /* Cursor on hover */
 }
 
