--- a/src/components/styles/FooterApp.css
+++ b/src/components/styles/FooterApp.css
@@ -2,12 +2,13 @@
  /*flexGrow: 1,*/
     display: flex;
     justify-content: space-between;
-    background-color: #000000;
-    box-shadow: 0 0 3px 2px rgba(63, 102, 153, 0.5);
+    background-color: #ffffff;
+    box-shadow: 0 0 3px 2px rgba(132, 140, 142, 0.5);
     /*text-align: center;*/
-    padding: 20px 0;
-    color: #f2f5f8;
-    min-height: 150px;
+    padding: 25px 0;
+    color: #0c1618;
+    font-weight: 600;
+    min-height: 100px;
     width: 100%;
     font-size: 1.2rem;
 }
@@ -32,7 +33,7 @@
 .right {
     display: flex;
     padding-right: 30px;
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 @media (max-width: 424.98px) {
