--- a/src/components/forWorker/styles1/signUpWorker.css
+++ b/src/components/forWorker/styles1/signUpWorker.css
@@ -13,6 +13,29 @@
     background-color: white;
 }
 
+.reg-button {
+    background-color: #f04d2d;
+    width: 250px;
+    height: 36px;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    border-color:  #f04d2d;
+    border-bottom: white;
+    border-right: white;
+;
+}
+.reg-button:disabled {
+    cursor: auto;
+    background-color: #fa9784;
+    border-color:  #fa9784;
+    color: #f6d1d1;
+    /*border-bottom: white;*/
+    /*border-right: white;*/
+}
+
 .map-wrapper {
     width: 600px;
     margin: auto;
