--- a/src/components/styles/AdItem.css
+++ b/src/components/styles/AdItem.css
@@ -1,13 +1,17 @@
 .adItem-main {
-    background-color: #def2f3;
-    color: #110808;
+    background-color: #ffffff;
+    /*box-shadow: 0 0 3px 2px rgba(132, 140, 142, 0.5);*/
+    box-shadow: 0 0 3px 2px rgba(80, 83, 80, 0.5);
+    color: #505350;
     font-size: 1.0rem;
-    font-weight: 400;
+    font-weight: 600;
     max-width: 50rem;
     min-width: 30rem;
     min-height: 180px;
     margin-bottom: 15px;
-    border-radius: 7px;
-    border: 4px double black;
-    padding: 5px 10px;
+    border-radius: 30px;
+    text-align: left;
+
+    /*border: 1px solid #505350;*/
+    padding: 10px 10px;
 }
