--- a/src/components/forWorker/styles1/WorkerPage.css
+++ b/src/components/forWorker/styles1/WorkerPage.css
@@ -74,3 +74,8 @@
 /*    background-position: left .7em top 50%, 0 0;*/
 /*    padding: .6em .8em .5em 1.4em;*/
 /*}*/
+
+.contacts {
+    padding: 0;
+    display: block;
+}
