--- a/src/components/forWorker/styles1/WorkerProfile.css
+++ b/src/components/forWorker/styles1/WorkerProfile.css
@@ -8,7 +8,11 @@
     background-color: white;
     color: #f04d2d;
 }
-
+.edit-button:hover {
+    background-color: #f04d2d;
+    border-radius: 5px;
+    color: #ffffff;
+}
 .right-table {
     border-collapse: collapse;
     border-spacing: 0;
