--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* Для формы авторизации и регистрации */
+.input-field {
+  width: 100%;
+  height: 25px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  padding-left: 7px;
+  border-color: #505350;
+  outline: none;
+}
+.input-field-error {
+  border-color: #f04d2d;
+  outline: none;
+}
+.input-field-error:focus {
+  border-color: #f04d2d;
+  box-shadow: 1px 1px 2px 0 #f04d2d;
+  outline: none;
+}
 
-
+/* Для загрузчика */
 .lds-dual-ring {
   display: inline-block;
   width: 80px;
@@ -28,8 +47,8 @@ code {
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #E0D366;
-  border-color: #E0D366 transparent #E0D366 transparent;
+  border: 6px solid #f04d2d;
+  border-color: #f04d2d transparent #f04d2d transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
 @keyframes lds-dual-ring {
@@ -39,5 +58,10 @@ code {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.div-louder {
+  margin: auto;
+  width: 90px;
 }
 
