--- a/src/components/forWorker/styles1/slider.css
+++ b/src/components/forWorker/styles1/slider.css
@@ -6,15 +6,15 @@
     border-radius: 5px;
     background: #f04d2d; /*  background */
     outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-    transition: opacity .2s;
+    /*opacity: 0.7; !* Set transparency (for mouse-over effects on hover) *!*/
+    /*-webkit-transition: .2s; !* 0.2 seconds transition on hover *!*/
+    /*transition: opacity .2s;*/
 }
 
 /* Mouse-over effects */
-.slider:hover {
-    opacity: 1; /* Fully shown on mouse-over */
-}
+/*.slider:hover {*/
+/*    opacity: 1; !* Fully shown on mouse-over *!*/
+/*}*/
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
@@ -32,5 +32,14 @@
     height: 20px; /* Slider handle height */
     background: #f04d2d;
     cursor: pointer; /* Cursor on hover */
+}
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+    .slider {
+        margin-top: 20px;
+    }
 }
 
