--- a/src/components/styles/FooterApp.css
+++ b/src/components/styles/FooterApp.css
@@ -5,12 +5,12 @@
     background-color: #ffffff;
     box-shadow: 0 0 3px 2px rgba(132, 140, 142, 0.5);
     /*text-align: center;*/
-    padding: 25px 0;
+    padding: 5px 0;
     color: #0c1618;
     font-weight: 600;
-    min-height: 100px;
+    min-height: 90px;
     width: 100%;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 @media (max-width: 767.98px) {
     .main {
@@ -23,15 +23,18 @@
 .group {
     display: flex;
     justify-content: space-around;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    font-size: 1.0rem;
 }
 .tit {
-    font-size: 2.1rem;
+    font-size: 1.6rem;
     font-weight: bold;
+    margin: 10px 0 10px 0;
 }
 
 .right {
     display: flex;
+    justify-content:space-around;
     padding-right: 30px;
     padding-top: 10px;
 }
@@ -39,5 +42,13 @@
 @media (max-width: 424.98px) {
     .group {
         flex-direction: column;
+    }
+}
+@media screen and (max-width: 768px) {
+    .main {
+        display: block;
+    }
+    .right {
+        justify-content: center;
     }
 }
