--- a/src/components/forWorker/styles1/SearchWork.css
+++ b/src/components/forWorker/styles1/SearchWork.css
@@ -73,6 +73,16 @@
     outline:none;
 }
 
+.reg-button-navLink {
+    background-color: #f04d2d;
+    color: white;
+    padding: 10px 30px 10px 30px;
+    text-decoration: none;
+    border-radius:7px;
+    outline: none;
+    border: 0;
+}
+
 @media screen and (max-width: 1024px) {
     .search-work-img {
         display: flex;
