--- a/src/components/forWorker/styles1/signUpWorker.css
+++ b/src/components/forWorker/styles1/signUpWorker.css
@@ -11,6 +11,11 @@
     margin-bottom: 20px;
     cursor: pointer;
     background-color: white;
+    outline: none;
+}
+.map-button:active {
+    border-style: solid;
+    outline: none;
 }
 
 .reg-button {
