--- a/src/components/forWorker/styles1/WorkerPage.css
+++ b/src/components/forWorker/styles1/WorkerPage.css
@@ -37,17 +37,18 @@
 
 .select-css {
     display: block;
-    font-size: 15px;
+    font-size: 16px;
     font-family: sans-serif;
-    font-weight: 700;
-    /*color: #444;*/
-    line-height: 1.3;
+    font-weight: 600;
+    color: #505350;
+    /*line-height: 1.3;*/
     padding: .6em 1.4em 0 .8em;
-    width: 100%;
-    max-width: 100%;
+    width: 80%;
+    max-width: 80%;
     box-sizing: border-box;
     margin: 0;
-    border: none;
+    outline: none;
+    border: 0 solid;
     /*border: 1px solid #aaa;*/
     /*box-shadow: 0 1px 0 1px rgba(0,0,0,.04);*/
     /*border-radius: .5em;*/
@@ -85,6 +86,99 @@
     color: #f04d2d;
     font-weight: 700;
     text-align: center;
+}
+.worker-left-details-wr {
+    text-align: left;
+    width: 340px;
+    margin: auto;
+}
+.worker-left-cont-title {
+    text-align: center;
+    font-weight: 700;
+    margin: 25px 0;
+}
+.worker-left-cont-flex {
+    display: flex;
+    justify-content: space-around;
+}
+.worker-left-left {
+    margin-right: 5px;
+}
+.worker-left-input {
+    width: 12rem;
+}
+.worker-left-check-box {
+    margin-top: 40px;
+    width: 340px;
+}
+.right-address-input {
+    width: 33rem;
+}
+.right-inputs {
+    width: 31.5rem;
+}
+.right-inputs-label {
+    margin: 5px 0 5px 15px;
+}
+.work-place-wr {
+    display: flex;
+    justify-content: flex-start;
+}
+@media screen and (max-width: 1024px) {
+    .worker-left-details-wr {
+        width: 280px;
+    }
+    .worker-left-input {
+        width: 8rem;
+    }
+    .worker-left-check-box {
+        width: 280px;
+        font-size: 0.95rem;
+        letter-spacing: 0;
+    }
+    .right-address-input {
+        width: 26.2rem;
+    }
+    .right-inputs {
+        width: 25rem;
+    }
+    .right-inputs-label {
+        margin: 5px 0 5px 10px;
+        font-size: 1.0rem;
+    }
+    .work-place-wr {
+        justify-content: space-between;
+    }
+}
+.absolute-button {
+    position: absolute;
+    bottom: 15px;
+    width: 380px;
+}
+@media screen and (max-width: 768px) {
+    .worker-left-details-wr {
+        width: 190px;
+    }
+    .worker-left-input {
+        width: 7rem;
+    }
+    .worker-left-check-box {
+        width: 190px;
+        font-size: 0.9rem;
+    }
+    .right-address-input {
+        width: 18.5rem;
+    }
+    .right-inputs {
+        width: 17rem;
+    }
+    .right-inputs-label {
+        margin: 5px 0 10px 5px;
+        font-size: 0.9rem;
+    }
+    .work-place-wr {
+        justify-content: space-between;
+    }
 }
 
 
