--- a/src/components/forWorker/styles1/SearchWork.css
+++ b/src/components/forWorker/styles1/SearchWork.css
@@ -11,7 +11,7 @@
 }
 .search-work-img-style {
     width: 30rem;
-    padding: 10px 10px 10px 10px;
+    padding: 8px 8px;
     border-radius: 1rem;
 }
 .search-work-reg-button-div {
@@ -40,7 +40,7 @@
 }
 .pre-search-text {
     font-size: 1.2rem;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     color: #f04d2d;
     text-transform: uppercase;
 }
@@ -54,7 +54,8 @@
     border-style:solid;
 }
 .search-work-button {
-    width: 120px;
+    width: auto;
+    min-width: 120px;
     background: #f04d2d;
     height: 35px;
     border-radius: 5px;
@@ -76,13 +77,12 @@
 .reg-button-navLink {
     background-color: #f04d2d;
     color: white;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 20px;
     text-decoration: none;
-    border-radius:7px;
+    border-radius:5px;
     outline: none;
     border: 0;
 }
-
 
 @media screen and (max-width: 1240px) {
     .m-maps {
