--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   color: #505350;
   font-size: 62.5%;
 }
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
