--- a/src/components/forWorker/styles1/SearchWork.css
+++ b/src/components/forWorker/styles1/SearchWork.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
+    margin-bottom: 60px;
 }
 .search-work-img-style {
     width: 30rem;
@@ -15,7 +16,7 @@
     border-radius: 1rem;
 }
 .search-work-reg-button-div {
-    margin: 50px 0;
+    margin: 20px 0 40px 0;
 }
 .vacancy-and-map-wrapper {
     display: flex;
@@ -82,6 +83,8 @@
     border-radius:5px;
     outline: none;
     border: 0;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 1240px) {
