--- a/src/components/employeesForCompany/styles2/EmployeesItem.css
+++ b/src/components/employeesForCompany/styles2/EmployeesItem.css
@@ -7,9 +7,8 @@
     font-size: 1.0rem;
     font-weight: 600;
     max-width: 50rem;
-    width: 50rem;
     min-width: 30rem;
-    min-height: 180px;
+    min-height: 160px;
     margin-bottom: 15px;
     border-radius: 10px;
     text-align: left;
@@ -22,7 +21,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .adItem-main {
+    .employeesItem-main {
         font-weight: 500;
     }
 }
@@ -31,13 +30,18 @@
     margin-block-end: 0.5em;
     /*font-size: 1.0rem;*/
 }
-.description-area {
+.description {
     cursor: pointer;
-    margin-right: 0.5rem;
+    margin-left: 15px;
 }
 .desc {
     font-weight: 400;
     text-align: -webkit-left;
+}
+.red-text {
+    color: #f04d2d;
+    font-size: 1.0rem;
+    font-weight: 600;
 }
 .vacancy-price {
     color: #f04d2d;
@@ -48,14 +52,15 @@
     background-color: #f04d2d;
     border-radius: 5px;
     color: #fff;
-    margin: 10px 10px 5px 5px;
+    /*margin: 10px 10px 5px 5px;*/
     outline: none;
     cursor: pointer;
     border-style:solid;
     border-color: #f04d2d;
     font-size: 1.0rem;
     width: auto;
-    height: 30px;
+    height: auto;
+    padding: 4px;
 }
 .sent-ok {
     font-size: 0.9rem;
