--- a/src/components/forWorker/styles1/Carousel.css
+++ b/src/components/forWorker/styles1/Carousel.css
@@ -1,21 +1,25 @@
-.carousel-wrapper {
-    /*font-size: 1.0rem;*/
-    padding: 5px 0;
-    display: flex;
-    justify-content: space-around;
-}
+/*.carousel-wrapper {*/
+/*    padding: 5px 0;*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*}*/
 
 .carousel-vacancy-wrapper {
     box-shadow: 0 0 3px 2px rgba(132, 140, 142, 0.5);
     border-radius: 5px;
-    width: 210px;
+    width: 240px;
     margin: 40px 0;
-    font-size: 1.1rem;
+    /*padding: 0 10px;*/
+    /*font-size: 1.1rem;*/
 }
 .vacancy-name {
     border-radius: 5px;
     height: 50px;
     display: flex;
+    color: #0C1618;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 10px;
 }
 .vacancy-name-inner {
     height: auto;
@@ -27,7 +31,9 @@
     border-radius: 5px;
     height: 40px;
     color: white;
-    font-weight: 400;
+    font-weight: normal;
+    font-size: 18px;
+    width: auto;
 }
 .vacancy-button {
     height: 40px;
@@ -38,8 +44,10 @@
     cursor: pointer;
 }
 .text {
-    font-size: 0.9rem;
+    font-size: 16px;
+    font-weight: normal;
     text-transform: uppercase;
+    font-style: normal;
 }
 
 .rec-dot {
