--- a/src/components/forWorker/styles1/SearchWork.css
+++ b/src/components/forWorker/styles1/SearchWork.css
@@ -1,8 +1,8 @@
 .search-work-wrapper {
     padding: 20px 0 30px 0;
     text-align: center;
-    font-size: 1.4rem;
-    font-weight: 600;
+    font-size: 14px;
+    /*font-weight: 600;*/
 }
 .search-work-img {
     display: flex;
