--- a/src/components/styles/AdItem.css
+++ b/src/components/styles/AdItem.css
@@ -4,7 +4,7 @@
                 -6px 0 6px -4px rgba(132, 140, 142, .5),
                 6px 0 6px -4px rgba(132, 140, 142, .5);
 
-    font-size: 1.0rem;
+    font-size: 14px;
     font-weight: 600;
     max-width: 50rem;
     min-width: 30rem;
@@ -28,7 +28,7 @@
 #cn {
     margin-block-start: 0;
     margin-block-end: 0.5em;
-    font-size: 0.9rem;
+    font-size: 12px;
 }
 .description-area {
     cursor: pointer;
@@ -41,8 +41,8 @@
 }
 .vacancy-price {
     color: #f04d2d;
-    font-weight: 700;
-    font-size: 1.2rem;
+    font-weight: bold;
+    font-size: 14px;
 }
 .sent-button {
     background-color: #f04d2d;
@@ -53,7 +53,10 @@
     cursor: pointer;
     border-style:solid;
     border-color: #f04d2d;
-    font-size: 1.0rem;
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
     width: 140px;
     height: 30px;
 }
@@ -63,7 +66,7 @@
     border-color: #848c8e;
 }
 .vacancy-title {
-    font-size: 1.2rem;
+    font-size: 16px;
     margin-block-start: 0.5em;
     margin-block-end: 0.5em;
 }
