--- a/src/components/employeesForCompany/styles2/CompanyBalance.css
+++ b/src/components/employeesForCompany/styles2/CompanyBalance.css
@@ -1,7 +1,9 @@
 .right-side-wrapper-company-balance {
     width: 60%;
-    border: 2px solid rgba(132, 140, 142, 0.5);
+    /*border: 1px solid rgba(132, 140, 142, 0.5);*/
+    border: 1px solid #848C8E;
     color: #0c1618;
+    font-size: 14px;
 }
 .bold_ {
     font-weight: bold;
@@ -29,14 +31,24 @@
     margin: 0 7px;
     padding-top: 3px;
 }
-.font_16 {
+.f_16 {
     font-size: 16px;
+}
+.f_14 {
+    font-size: 14px;
 }
 .margin_T_B {
     margin: 15px 0;
 }
 .margin_B {
     margin-bottom: 15px;
+}
+.margin_T {
+    margin-top: 3px;
+}
+.padding_T {
+    padding-top: 4px;
+    line-height: 16px;
 }
 .margin_B_2 {
     margin-bottom: 30px;
@@ -54,6 +66,7 @@
 .td_comp {
     text-align: center;
     width: 100px;
+    /*border: 1px solid #848c8e;*/
 }
 .hidden_ {
     color: white;
@@ -79,6 +92,18 @@
 .left-al {
     text-align: left;
 }
+.width-height-circle {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: white;
+    box-shadow: 0 0 2px 2px rgba(132, 140, 142, 0.5);
+    margin-top: auto;
+    margin-bottom: auto;
+}
 .width-td {
-    min-width: 25px;
+    width: 25px;
+}
+.tr_space {
+
 }
