--- a/src/components/styles/AdItem.css
+++ b/src/components/styles/AdItem.css
@@ -6,7 +6,7 @@
 
     font-size: 14px;
     font-weight: 600;
-    max-width: 660px;
+    max-width: 664px;
     min-width: 30rem;
     min-height: 180px;
     margin-bottom: 15px;
@@ -45,29 +45,42 @@
     font-size: 14px;
 }
 .sent-button {
+    width: 120px;
+    height: 30px;
     background-color: #f04d2d;
     border-radius: 5px;
     color: #fff;
-    margin-top: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 14px;
+    text-transform: uppercase;
     outline: none;
     cursor: pointer;
     border-style:solid;
     border-color: #f04d2d;
-    font-size: 12px;
-    line-height: 14px;
+    margin-top: 5px;
+}
+.cancel {
     font-weight: bold;
+    font-size: 10px;
+    line-height: 12px;
     text-transform: uppercase;
-    width: 120px;
+    background-color: #505350;
+    border: 1px solid #505350;
+    border-radius: 5px;
+    outline: none;
+    color: #ffffff;
+    cursor: pointer;
     height: 30px;
+    width: 80px;
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-left: 40px;
 }
 .sent-ok {
+    cursor: inherit;
     font-size: 12px;
-    background-color: #848c8e;
-    border-color: #ffffff;
-    color: #505350;
-}
-.sent-ok {
-    font-size: 12px;
+    width: auto;
     background-color: #ffffff;
     border-color: #ffffff;
     color: #505350;
@@ -79,11 +92,13 @@
 }
 .red-button-text {
     color: #f04d2d;
-    font-size: 1.0rem;
-    border: 0;
     font-weight: bold;
+    font-size: 12px;
+    line-height: 20px;
+    font-style: normal;
+    border: 0;
     margin-top: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
     cursor: pointer;
     background-color: white;
     outline: none;
