--- a/src/components/forWorker/styles1/WorkerProfile.css
+++ b/src/components/forWorker/styles1/WorkerProfile.css
@@ -75,6 +75,7 @@ td {
     width: 100%;
     margin: 25px 0;
     text-align: center;
+    text-transform: uppercase;
 }
 .contact-content-wr {
     display: flex;
