--- a/src/components/employeesForCompany/styles2/SelectedVacancy.css
+++ b/src/components/employeesForCompany/styles2/SelectedVacancy.css
@@ -1,31 +1,46 @@
 .sel-vac-table {
-    width: 880px;
+    width: 920px;
     height: auto;
     margin: auto;
     border-spacing: 0 7px;
 }
-
+.sel-vac-table2 {
+    width: 990px;
+    height: auto;
+    margin: auto;
+    border-spacing: 0 7px;
+}
 .sel-vac-td1, .sel-vac-td {
+    height: 34px;
     border-top: 1px solid #525252;
     border-bottom: 1px solid #525252;
     padding: 0 10px;
 }
 .sel-vac-td1 {
-    width: 300px;
-    font-weight: 300;
+    width: 280px;
     border-left: 1px solid #525252;
 }
 .sel-vac-td {
-    width: 145px;
+    width: 160px;
     text-align: center;
     font-weight: 500;
+}
+.sel-vac-td2 {
+    width: 150px;
+    text-align: right;
 }
 .sel-td-bg {
     background-color: #9D9D9D;
     color: white;
 }
+
 .border-5 {
     border-right: 1px solid #525252;;
+}
+.border-0 {
+    border-right: 1px solid #ffffff;
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
 }
 .filter {
     font-weight: bold;
@@ -43,4 +58,63 @@
     outline: none;
     font-size: 14px;
     font-weight: bold;
+}
+.two_buttons_wr {
+    width: 299px;
+    height: 32px;
+    background-color: #FFA390;
+    border-radius: 4px;
+    margin-top: 6px;
+}
+.active_button {
+    background-color: #F04D2D;
+    width: 149px;
+    height: 32px;
+    border: 1px solid #F04D2D;
+    border-radius: 4px;
+    outline: none;
+    font-weight: bold;
+    font-size: 17px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+.no_active {
+    background-color: #FFA390;
+    width: 132px;
+    height: 32px;
+    border: 1px solid #FFA390;
+    border-radius: 4px;
+    outline: none;
+    font-weight: bold;
+    font-size: 17px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+.padding-left-7 {
+    padding-left: 7px;
+}
+#address {
+    position: relative;
+}
+#address .help-text {
+    transition: all 0.6s;
+    opacity: 0;
+    position: absolute;
+    right: 2px;
+    top: -0.8px;
+    color: #F04D2D;
+    font-size: 11px;
+    font-weight: 400;
+}
+#address:hover .help-text {
+    opacity: 1;
+}
+.noLink-decoration {
+    text-decoration: none;
+    color: #505350;
+    font-weight: 300;
 }
