--- a/src/components/employeesForCompany/styles2/EmployeesItem.css
+++ b/src/components/employeesForCompany/styles2/EmployeesItem.css
@@ -6,16 +6,14 @@
 
     font-size: 1.0rem;
     font-weight: 600;
-    max-width: 50rem;
-    min-width: 30rem;
+    max-width: 664px;
+    min-width: 600px;
     min-height: 160px;
     margin-bottom: 15px;
     border-radius: 10px;
     text-align: left;
-
     margin-right: auto;
     margin-left: auto;
-
     /*border: 1px solid #505350;*/
     padding: 10px 10px;
 }
@@ -52,15 +50,18 @@
     background-color: #f04d2d;
     border-radius: 5px;
     color: #fff;
-    /*margin: 10px 10px 5px 5px;*/
     outline: none;
     cursor: pointer;
     border-style:solid;
     border-color: #f04d2d;
-    font-size: 1.0rem;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 12px;
     width: auto;
     height: auto;
     padding: 4px;
+    text-transform: uppercase
 }
 .sent-ok {
     font-size: 0.9rem;
