--- a/src/components/employeesForCompany/styles2/EmployeesItem.css
+++ b/src/components/employeesForCompany/styles2/EmployeesItem.css
@@ -15,7 +15,7 @@
     margin-right: auto;
     margin-left: auto;
     /*border: 1px solid #505350;*/
-    padding: 10px 10px;
+    padding: 10px 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -26,11 +26,13 @@
 #cn {
     margin-block-start: 0;
     margin-block-end: 0.5em;
-    /*font-size: 1.0rem;*/
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 20px;
 }
 .description {
     cursor: pointer;
-    margin-left: 15px;
+    /*margin-left: 15px;*/
 }
 .desc {
     font-weight: 400;
@@ -59,7 +61,7 @@
     font-size: 10px;
     line-height: 12px;
     width: auto;
-    height: auto;
+    height: 30px;
     padding: 4px;
     text-transform: uppercase
 }
