--- a/src/components/styles/SignIn.css
+++ b/src/components/styles/SignIn.css
@@ -8,7 +8,8 @@
 }
 
 .forgot-password-button {
-    font-size: 0.9rem;
+    font-size: 16px;
+    font-weight: normal;
     border: 0;
     letter-spacing: 1px;
     cursor: pointer;
