--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,8 @@ code {
   font-size: 16px;
   line-height: 21px;
   border-radius: 5px;
-  border-color: #848c8e;
+  border: 2px solid #0C1618;
   outline: none;
-  border-style:solid;
 }
 .input-field-error {
   border-color: #f04d2d;
@@ -129,13 +128,18 @@ h1, h2, h3 {
 .align-c {
   text-align: center;
 }
-._red {
+.c_red {
   color: #F04D2D;
 }
-.ce-color2 {
+.c_848C8E {
   color: #848C8E;
 }
-
+.c_white {
+  color: white ;
+}
+.color-0C1618 {
+  color: #0C1618;
+}
 .company-page-title {
   text-align: center;
   font-size: 20px;
@@ -155,12 +159,6 @@ h1, h2, h3 {
 textarea {
   resize: none;
 }
-.font-12-norm {
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 12px;
-  color: #0C1618
-}
 .red-input {
   height: 42px;
   width: 435px;
@@ -174,6 +172,68 @@ textarea {
   margin: auto;
   cursor: pointer;
 }
-.color-pink {
-
+.marg-and-padding-14 {
+  padding-top: 14px;
+  margin-left: 14px;
 }
+.font-10-b {
+  font-weight: bold;
+  font-size: 10px;
+}
+.font-12-norm {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+}
+.font-12-500 {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+}
+.font-14-500 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+}
+.font-bold {
+  font-weight: bold;
+}
+.font-16-normal {
+  font-weight: normal;
+  font-size: 16px;
+}
+.font-16-bold {
+  font-weight: bold;
+  font-size: 16px;
+}
+.font-20-bold {
+  font-weight: bold;
+  font-size: 20px;
+}
+.marg-b-9 {
+  margin-bottom: 9px;
+}
+.marg-b-15 {
+  margin-bottom: 15px;
+}
+.pad-t-b-30 {
+  padding: 30px 0;
+}
+.text-up {
+  text-transform: uppercase;
+}
+.whiteButton {
+  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  outline: none;
+}
+.bbb {
+  width: 494px;
+  height: 110px;
+  margin: 20px auto 10px auto;
+  padding: 5px;
+  border: 1px solid #525252;
+}
+
